added second section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="./style/style.css">
   <title>Document</title>
 </head>
+
 <body>
   <section class="section-1">
     <header class="header">
@@ -45,5 +47,69 @@
       </div>
     </div>
   </section>
+  <section class="section-2">
+    <div class="section-2__text">
+      <h1>НАШИ КУРСЫ</h1>
+      <p>Направления, по которым вы можете пройти мастер-классы</p>
+    </div>
+    <div class="section-2__courses">
+      <nav class="section-2__menu">
+        <ul class="section-2__list">
+          <li class="section-2__item selected">Все</li>
+          <li class="section-2__item">Вокал</li>
+          <li class="section-2__item">Гитара</li>
+          <li class="section-2__item">Ударные</li>
+          <li class="section-2__item">Клавишные</li>
+        </ul>
+      </nav>
+      <div class="section-2__content">
+        <div class="section-2__cards">
+          <div class="acoustic-guitar">
+            <div class="card-container">
+              <h2>Акустическая гитара</h2>
+              <div class="more">Подробнее</div>
+            </div>
+          </div>
+          <div class="electric-guitar">
+            <div class="card-container">
+              <h2>Акустическая гитара</h2>
+              <div class="more">Подробнее</div>
+            </div>
+          </div>
+          <div class="bass-guitar">
+            <div class="card-container">
+              <h2>Акустическая гитара</h2>
+              <div class="more">Подробнее</div>
+            </div>
+          </div>
+          <div class="pop-vocal">
+            <div class="card-container">
+              <h2>Акустическая гитара</h2>
+              <div class="more">Подробнее</div>
+            </div>
+          </div>
+          <div class="folk-vocal">
+            <div class="card-container">
+              <h2>Акустическая гитара</h2>
+              <div class="button-container">
+                <div class="more">Подробнее</div>
+              </div>
+            </div>
+          </div>
+          <div class="academic-vocal">
+            <div class="card-container">
+              <h2>Акустическая гитара</h2>
+              <div class="more">Подробнее</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="buttons-container">
+        <div class="all-courses"><a href="/">Все курсы<a></a></div>
+        <div class="sign"><a href="/">Записаться<a></div>
+      </div>
+    </div>
+  </section>
 </body>
+
 </html>
