--- a/index.html
+++ b/index.html
@@ -110,6 +110,35 @@
       </div>
     </div>
   </section>
+  <section class="section-3">
+    <div class="text-top">
+      <h1 class="white">КТО МЫ?</h1>
+      <div class="section-3__text-container-top">
+        <div class="black-star"><img src="./assets/black-star.png" alt=""></div>
+        <p class="heading-p">
+          Продюсерский центр Игоря Сандлера –
+          <br>
+          многофункциональный музыкальный комплекс,
+          <br>
+          объединяющий в себе две студии звукозаписи
+          <br>
+          полного цикла, Концертный и хореографический
+          <br>
+          залы, а также уникальный музей клавишных
+          <br>
+          инструментов.
+        </p>
+      </div>
+      <div class="foundation-year">
+        <h1 class="black">2011</h1>
+        <p class="p-like">год открытия продюсерского центра</p>
+      </div>
+      <div class="years-in-business">
+        <h1 class="black">40 ЛЕТ</h1>
+        <p class="p-like">в музыкальной индустрии</p>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
