--- a/index.html
+++ b/index.html
@@ -138,6 +138,17 @@
         <p class="p-like">в музыкальной индустрии</p>
       </div>
     </div>
+    <div class="text-bottom">
+      <h1 class="h1-like white">Я всегда шел
+        <br>
+        не вместе со всеми,
+        <br>
+        <span class="inner-span">а поперек.</span> И всегда
+        <br>
+        объективно
+        <br>
+        относился к себе</h1>
+    </div>
   </section>
 </body>
 
