--- a/index.html
+++ b/index.html
@@ -147,8 +147,23 @@
         <br>
         объективно
         <br>
-        относился к себе</h1>
+        относился к себе
+      </h1>
     </div>
+  </section>
+  <section class="section-4">
+    <form action="">
+      <fieldset>
+        <h1 class="heading">НАЧНИТЕ ОБУЧЕНИЕ
+          С ПРОБНОГО УРОКА</h1>
+        <select name="" id="">
+          <option value="" disabled>Формат обучения</option>
+        </select>
+        <input type="text" placeholder="Имя">
+        <input type="tel" placeholder="Телефон">
+        <input class="request" type="submit" value="Оставить заявку">
+      </fieldset>
+    </form>
   </section>
 </body>
 
