--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
   <title>Document</title>
 </head>
 
@@ -151,7 +152,7 @@
       </h1>
     </div>
   </section>
-  <section class="section-4">
+  <!-- <section class="section-4">
     <form action="">
       <fieldset>
         <h1 class="heading">НАЧНИТЕ ОБУЧЕНИЕ
@@ -164,7 +165,52 @@
         <input class="request" type="submit" value="Оставить заявку">
       </fieldset>
     </form>
+  </section> -->
+  <!-- <div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <img src="./assets/fedorova.png" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="./assets/neto.png" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="./assets/shutova.png" alt="">
+      </div>
+      <div class="swiper-slide">
+        <img src="./assets/fedorova.png" alt="">
+      </div>
+
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+  </div> -->
+  <section class="section-5">
+    <h1>ОТЗЫВЫ</h1>
+    <div class="section-5__content">
+      <div class="h1-quote">«</div>
+      <p class="info-text">Выступление наших детей на первом отчетном концерте
+        <br>
+        произвело на меня огромное впечатление. Представленная
+        <br>
+        программа прозвучала ярко, эмоционально. Невероятно, что дети
+        <br>
+        встретились и объединились в коллектив совсем недавно, и уже
+        <br>
+        показали такой высокий уровень. Мы счастливы, что попали
+        <br>
+        в уникальный проект «Золотая нота. Трамплин для талантов»!</p>
+      <p class="maria">Мама Таисии Скомороховой
+        <br>
+        (Нугуманова Гульнара Рамилевна)</p>
+    </div>
+    <div class="button-container">
+      <div class="see-more">Смотреть еще</div>
+      <div class="try">Пробное занятие</div>
+    </div>
   </section>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  <script src="./index.js"></script> -->
 </body>
 
 </html>
