--- a/index.html
+++ b/index.html
@@ -199,14 +199,81 @@
         <br>
         показали такой высокий уровень. Мы счастливы, что попали
         <br>
-        в уникальный проект «Золотая нота. Трамплин для талантов»!</p>
+        в уникальный проект «Золотая нота. Трамплин для талантов»!
+      </p>
       <p class="maria">Мама Таисии Скомороховой
         <br>
-        (Нугуманова Гульнара Рамилевна)</p>
+        (Нугуманова Гульнара Рамилевна)
+      </p>
     </div>
     <div class="button-container">
       <div class="see-more">Смотреть еще</div>
-      <div class="try">Пробное занятие</div>
+      <div class="try-red">Пробное занятие</div>
+    </div>
+  </section>
+  <section class="section-6"></section>
+  <section class="section-7">
+    <h1>Уникальный
+      <br>
+      молодежный проект
+    </h1>
+    <div class="section-7__text-container-top">
+      <p>Программа обучения построена на сочетании
+        <br>
+        индивидуальных занятий профильных
+        <br>
+        предметов музыкантов (вокала, гитары,
+        <br>
+        бас-гитары, клавишных, ударных), обязательных
+        <br>
+        для посещения, а также факультативных
+        <br>
+        занятий по слушанию музыки и обсуждению
+        <br>
+        стилей, жанров и направлений.
+        <br>
+        <br>
+        Во время прохождения обучения ежемесячно
+        <br>
+        проводятся мастер-классы с известными
+        <br>
+        российскими музыкантами и онлайн-занятия
+        <br>
+        с мировыми преподавателями по вокалу.
+      </p>
+
+    </div>
+    <div class="section-7__text-container-middle">
+      <p>Для выступления ансамблем юные музыканты
+        <br>
+        приобретают необходимые навыки сыгранности,
+        <br>
+        импровизации, смогут потренироваться создавать
+        <br>
+        собственные музыкаль ные произведения
+        <br>
+        и оформлять права на них. У нас постоянно проходят
+        <br>
+        учебные концерты на площадке Продюсерского
+        <br>
+        центра Игоря Сандлера, а также выступления
+        <br>
+        на других известных клубных площадках.
+        <br>
+        <br>
+        Наши группы выступают на самых крупных
+        <br>
+        музыкальных фестивалях г. Москвы на одной сцене
+        <br>
+        с мировыми звездами.
+      </p>
+    </div>
+    <div class="section-7__text-container-bottom">
+      <p>Наши учащиеся знакомятся с основами продвижения музыкальных групп, узнают как правильно создать свой имидж, получить необходимую информационную поддержку и самопродюсировать себя, чтобы начать самостоятельное продвижение.
+      </p>
+    </div>
+    <div class="section-7__button-container">
+      <div class="try-white">Пробное занятие</div>
     </div>
   </section>
   <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
