--- a/index.html
+++ b/index.html
@@ -276,6 +276,21 @@
       <div class="try-white">Пробное занятие</div>
     </div>
   </section>
+  <section class="section-8">
+    <h1>Контакты</h1>
+    <p class="mina">Мы всегда на связи!</p>
+    <img src="./assets/logo/full-logo-red.png" alt="">
+    <p>Режим работы:</p>
+    <p class="mina">Ежедневно с 10:00 до 22:00</p>
+    <div class="section-8__number"><a href=”tel:+74991234567”>8 (499) 123 45 67</a></div>
+    <address>г. Москва, Потаповский пер. 3с1</address>
+    <div class="icon-container">
+      <div class="tiktok"></div>
+      <div class="whatsapp"></div>
+      <div class="telegram"></div>
+    </div>
+    <button class="callback callback-footer">Обратный звонок</button>
+  </section>
   <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="./index.js"></script> -->
 </body>
