--- a/index.html
+++ b/index.html
@@ -279,7 +279,10 @@
   <section class="section-8">
     <h1>Контакты</h1>
     <p class="mina">Мы всегда на связи!</p>
-    <img src="./assets/logo/full-logo-red.png" alt="">
+    <div class="sandler-container">
+      <img src="./assets/logo/SVG/Ресурс 4.svg" alt="">
+    </div>
+
     <p>Режим работы:</p>
     <p class="mina">Ежедневно с 10:00 до 22:00</p>
     <div class="section-8__number"><a href=”tel:+74991234567”>8 (499) 123 45 67</a></div>
@@ -291,6 +294,17 @@
     </div>
     <button class="callback callback-footer">Обратный звонок</button>
   </section>
+  <footer class="footer">
+    <nav class="footer__menu">
+      <ul class="footer_l_ist">
+        <li class="footer__item"><a href="">О нас</a></li>
+        <li class="footer__item"><a href="">Курсы</a></li>
+        <li class="footer__item"><a href="">Цены</a></li>
+        <li class="footer__item"><a href="">FAQ</a></li>
+        <li class="footer__item"><a href="">Контакты</a></li>
+      </ul>
+    </nav>
+  </footer>
   <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="./index.js"></script> -->
 </body>
