--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="header-container">
         <div class="logo-container">
-          <a href="/"><img src="./assets/logo/full-logo-white.png" alt="logo"></a>
+          <a href="/"><img src="./assets/logo/full-logo-white.svg" alt="logo"></a>
         </div>
         <nav class="header__menu">
           <ul class="header__list">
@@ -106,8 +106,8 @@
         </div>
       </div>
       <div class="buttons-container">
-        <div class="all-courses"><a href="/">Все курсы<a></a></div>
-        <div class="sign"><a href="/">Записаться<a></div>
+        <div class="all-courses"><a href="/">Все курсы</a></div>
+        <div class="sign"><a href="/">Записаться</a></div>
       </div>
     </div>
   </section>
@@ -269,7 +269,9 @@
       </p>
     </div>
     <div class="section-7__text-container-bottom">
-      <p>Наши учащиеся знакомятся с основами продвижения музыкальных групп, узнают как правильно создать свой имидж, получить необходимую информационную поддержку и самопродюсировать себя, чтобы начать самостоятельное продвижение.
+      <p>Наши учащиеся знакомятся с основами продвижения музыкальных групп, узнают как правильно создать свой имидж,
+        получить необходимую информационную поддержку и самопродюсировать себя, чтобы начать самостоятельное
+        продвижение.
       </p>
     </div>
     <div class="section-7__button-container">
@@ -280,30 +282,56 @@
     <h1>Контакты</h1>
     <p class="mina">Мы всегда на связи!</p>
     <div class="sandler-container">
-      <img src="./assets/logo/SVG/Ресурс 4.svg" alt="">
+      <img src="./assets/logo/full-logo-red.svg" alt="">
     </div>
 
     <p>Режим работы:</p>
     <p class="mina">Ежедневно с 10:00 до 22:00</p>
     <div class="section-8__number"><a href=”tel:+74991234567”>8 (499) 123 45 67</a></div>
     <address>г. Москва, Потаповский пер. 3с1</address>
-    <div class="icon-container">
-      <div class="tiktok"></div>
-      <div class="whatsapp"></div>
-      <div class="telegram"></div>
-    </div>
-    <button class="callback callback-footer">Обратный звонок</button>
+    <ul class="icon-container">
+      <li><a class="tiktok" href=""></a></li>
+      <li><a class="whatsapp" href=""></a></li>
+      <li><a class="telegram" href=""></a></li>
+    </ul>
+    <button class="callback callback-contacts">Обратный звонок</button>
   </section>
   <footer class="footer">
-    <nav class="footer__menu">
-      <ul class="footer_l_ist">
-        <li class="footer__item"><a href="">О нас</a></li>
-        <li class="footer__item"><a href="">Курсы</a></li>
-        <li class="footer__item"><a href="">Цены</a></li>
-        <li class="footer__item"><a href="">FAQ</a></li>
-        <li class="footer__item"><a href="">Контакты</a></li>
-      </ul>
-    </nav>
+    <div class="footer__top-line">
+      <img src="./assets/logo/full-logo-white.svg" alt="">
+
+      <nav class="footer__menu">
+        <ul class="footer__list">
+          <li class="footer__item"><a href="">О нас</a></li>
+          <li class="footer__item"><a href="">Курсы</a></li>
+          <li class="footer__item"><a href="">Цены</a></li>
+          <li class="footer__item"><a href="">FAQ</a></li>
+          <li class="footer__item"><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <div class="footer__icons-container">
+        <ul class="icon-container">
+          <li><a class="tiktok" href=""></a></li>
+          <li><a class="whatsapp" href=""></a></li>
+          <li><a class="telegram" href=""></a></li>
+        </ul>
+        <button class="callback callback-footer">Обратный звонок</button>
+      </div>
+    </div>
+    <div class="footer__bottom-line">
+      <p>Фонд поддержки одаренных детей и молодежи Игоря Сандлера
+        <br>
+        ИНН 7719290541; КПП771901001; ОГРН 1137799010030
+        <br>
+        Юридический адрес: 105203, г. Москва, ул. Первомайская,
+        <br>
+        д. 109/2, кв. 17
+      </p>
+      <div class="footer__contacts-container">
+        <div class="footer__number"><a href=”tel:+74991234567”>8 (499) 123 45 67</a></div>
+        <address>г. Москва, Потаповский пер. 3с1</address>
+      </div>
+    </div>
   </footer>
   <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="./index.js"></script> -->
