--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-  <title>Document</title>
+  <title>Sandler Rock School</title>
 </head>
 
 <body>
@@ -15,7 +15,8 @@
     <header class="header">
       <div class="header-container">
         <div class="logo-container">
-          <a href="/"><img src="./assets/logo/full-logo-white.svg" alt="logo"></a>
+          <!-- IMG -->
+          <a href="/"><img src="./assets/logo/full-logo-white.svg" alt=""></a>
         </div>
         <nav class="header__menu">
           <ul class="header__list">
@@ -247,130 +248,141 @@
       <div class="try-red">Пробное занятие</div>
     </div>
   </section>
-  <section class="section-6"></section>
-  <section class="section-7">
-    <h1>Уникальный
-      <br>
-      молодежный проект
-    </h1>
-    <div class="section-7__text-container-top">
-      <p>Программа обучения построена на сочетании
-        <br>
-        индивидуальных занятий профильных
-        <br>
-        предметов музыкантов (вокала, гитары,
-        <br>
-        бас-гитары, клавишных, ударных), обязательных
-        <br>
-        для посещения, а также факультативных
-        <br>
-        занятий по слушанию музыки и обсуждению
-        <br>
-        стилей, жанров и направлений.
-        <br>
-        <br>
-        Во время прохождения обучения ежемесячно
-        <br>
-        проводятся мастер-классы с известными
-        <br>
-        российскими музыкантами и онлайн-занятия
-        <br>
-        с мировыми преподавателями по вокалу.
-      </p>
-
-    </div>
-    <div class="section-7__text-container-middle">
-      <p>Для выступления ансамблем юные музыканты
-        <br>
-        приобретают необходимые навыки сыгранности,
-        <br>
-        импровизации, смогут потренироваться создавать
-        <br>
-        собственные музыкаль ные произведения
-        <br>
-        и оформлять права на них. У нас постоянно проходят
-        <br>
-        учебные концерты на площадке Продюсерского
-        <br>
-        центра Игоря Сандлера, а также выступления
-        <br>
-        на других известных клубных площадках.
-        <br>
-        <br>
-        Наши группы выступают на самых крупных
-        <br>
-        музыкальных фестивалях г. Москвы на одной сцене
-        <br>
-        с мировыми звездами.
-      </p>
-    </div>
-    <div class="section-7__text-container-bottom">
-      <p>Наши учащиеся знакомятся с основами продвижения музыкальных групп, узнают как правильно создать свой имидж,
-        получить необходимую информационную поддержку и самопродюсировать себя, чтобы начать самостоятельное
-        продвижение.
-      </p>
-    </div>
-    <div class="section-7__button-container">
-      <div class="try-white">Пробное занятие</div>
+  <section class="students-pics">
+    <h1>Фото учеников</h1>
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">Slide 1</div>
+        <div class="swiper-slide">Slide 2</div>
+        <div class="swiper-slide">Slide 3</div>
+      </div>
+      <div class="swiper-pagination"></div>
     </div>
   </section>
-  <section class="section-8">
-    <h1>Контакты</h1>
-    <p class="mina">Мы всегда на связи!</p>
-    <div class="sandler-container">
-      <img src="./assets/logo/full-logo-red.svg" alt="">
-    </div>
+    <section class="section-6"></section>
+    <section class="section-7">
+      <h1>Уникальный
+        <br>
+        молодежный проект
+      </h1>
+      <div class="section-7__text-container-top">
+        <p>Программа обучения построена на сочетании
+          <br>
+          индивидуальных занятий профильных
+          <br>
+          предметов музыкантов (вокала, гитары,
+          <br>
+          бас-гитары, клавишных, ударных), обязательных
+          <br>
+          для посещения, а также факультативных
+          <br>
+          занятий по слушанию музыки и обсуждению
+          <br>
+          стилей, жанров и направлений.
+          <br>
+          <br>
+          Во время прохождения обучения ежемесячно
+          <br>
+          проводятся мастер-классы с известными
+          <br>
+          российскими музыкантами и онлайн-занятия
+          <br>
+          с мировыми преподавателями по вокалу.
+        </p>
 
-    <p>Режим работы:</p>
-    <p class="mina">Ежедневно с 10:00 до 22:00</p>
-    <div class="section-8__number"><a href=”tel:+74997558600”>8 (499) 755 86 00</a></div>
-    <address>г. Москва, Потаповский пер. 3с1</address>
-    <ul class="icon-container">
-      <li><a class="tiktok" href=""></a></li>
-      <li><a class="whatsapp" href=""></a></li>
-      <li><a class="telegram" href=""></a></li>
-    </ul>
-    <button class="callback callback-contacts">Обратный звонок</button>
-  </section>
-  <footer class="footer">
-    <div class="footer__top-line">
-      <img src="./assets/logo/full-logo-white.svg" alt="">
+      </div>
+      <div class="section-7__text-container-middle">
+        <p>Для выступления ансамблем юные музыканты
+          <br>
+          приобретают необходимые навыки сыгранности,
+          <br>
+          импровизации, смогут потренироваться создавать
+          <br>
+          собственные музыкаль ные произведения
+          <br>
+          и оформлять права на них. У нас постоянно проходят
+          <br>
+          учебные концерты на площадке Продюсерского
+          <br>
+          центра Игоря Сандлера, а также выступления
+          <br>
+          на других известных клубных площадках.
+          <br>
+          <br>
+          Наши группы выступают на самых крупных
+          <br>
+          музыкальных фестивалях г. Москвы на одной сцене
+          <br>
+          с мировыми звездами.
+        </p>
+      </div>
+      <div class="section-7__text-container-bottom">
+        <p>Наши учащиеся знакомятся с основами продвижения музыкальных групп, узнают как правильно создать свой имидж,
+          получить необходимую информационную поддержку и самопродюсировать себя, чтобы начать самостоятельное
+          продвижение.
+        </p>
+      </div>
+      <div class="section-7__button-container">
+        <div class="try-white">Пробное занятие</div>
+      </div>
+    </section>
+    <section class="section-8">
+      <h1>Контакты</h1>
+      <p class="mina">Мы всегда на связи!</p>
+      <div class="sandler-container">
+        <img src="./assets/logo/full-logo-red.svg" alt="">
+      </div>
 
-      <nav class="footer__menu">
-        <ul class="footer__list">
-          <li class="footer__item"><a href="">О нас</a></li>
-          <li class="footer__item"><a href="">Курсы</a></li>
-          <li class="footer__item"><a href="">Цены</a></li>
-          <li class="footer__item"><a href="">FAQ</a></li>
-          <li class="footer__item"><a href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <div class="footer__icons-container">
-        <ul class="icon-container">
-          <li><a class="tiktok" href=""></a></li>
-          <li><a class="whatsapp" href=""></a></li>
-          <li><a class="telegram" href=""></a></li>
-        </ul>
-        <button class="callback callback-footer">Обратный звонок</button>
+      <p>Режим работы:</p>
+      <p class="mina">Ежедневно с 10:00 до 22:00</p>
+      <div class="section-8__number"><a href=”tel:+74997558600”>8 (499) 755 86 00</a></div>
+      <address>г. Москва, Потаповский пер. 3с1</address>
+      <ul class="icon-container">
+        <li><a class="tiktok" href=""></a></li>
+        <li><a class="whatsapp" href=""></a></li>
+        <li><a class="telegram" href=""></a></li>
+      </ul>
+      <button class="callback callback-contacts">Обратный звонок</button>
+    </section>
+    <footer class="footer">
+      <div class="footer__top-line">
+        <img src="./assets/logo/full-logo-white.svg" alt="">
+
+        <nav class="footer__menu">
+          <ul class="footer__list">
+            <li class="footer__item"><a href="">О нас</a></li>
+            <li class="footer__item"><a href="">Курсы</a></li>
+            <li class="footer__item"><a href="">Цены</a></li>
+            <li class="footer__item"><a href="">FAQ</a></li>
+            <li class="footer__item"><a href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <div class="footer__icons-container">
+          <ul class="icon-container">
+            <li><a class="tiktok" href=""></a></li>
+            <li><a class="whatsapp" href=""></a></li>
+            <li><a class="telegram" href=""></a></li>
+          </ul>
+          <button class="callback callback-footer">Обратный звонок</button>
+        </div>
       </div>
-    </div>
-    <div class="footer__bottom-line">
-      <p>Фонд поддержки одаренных детей и молодежи Игоря Сандлера
-        <br>
-        ИНН 7719290541; КПП771901001; ОГРН 1137799010030
-        <br>
-        Юридический адрес: 105203, г. Москва, ул. Первомайская,
-        <br>
-        д. 109/2, кв. 17
-      </p>
-      <div class="footer__contacts-container">
-        <div class="footer__number"><a href=”tel:+74997558600>8 (499) 755 86 00</a></div>
-        <address>г. Москва, Потаповский пер. 3с1</address>
+      <div class="footer__bottom-line">
+        <p>Фонд поддержки одаренных детей и молодежи Игоря Сандлера
+          <br>
+          ИНН 7719290541; КПП771901001; ОГРН 1137799010030
+          <br>
+          Юридический адрес: 105203, г. Москва, ул. Первомайская,
+          <br>
+          д. 109/2, кв. 17
+        </p>
+        <div class="footer__contacts-container">
+          <div class="footer__number"><a href=”tel:+74997558600>8 (499) 755 86 00</a></div>
+          <address>г. Москва, Потаповский пер. 3с1</address>
+        </div>
       </div>
-    </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-  <script src="./index.js"></script>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
