--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </ul>
         </nav>
         <div class="contacts-container">
-          <button class="callback">Обратный звонок</button>
+          <button class="callback"><a href="#take-a-lesson">Обратный звонок</a></button>
           <div class="contacts">
             <div class="number"><a href=”tel:+74997558600>8 (499) 755 86 00</a></div>
             <address>г. Москва, Потаповский пер. 3с1</address>
@@ -45,7 +45,7 @@
       <div class="section-1__content__button-container">
         <div class="whatsapp"></div>
         <div class="telegram"></div>
-        <div class="try-lesson">Пробное занятие</div>
+        <div class="try-lesson"><a href="#take-a-lesson">Пробное занятие<a></div>
       </div>
     </div>
   </section>
@@ -108,7 +108,7 @@
       </div>
       <div class="buttons-container">
         <div class="all-courses"><a href="/">Все курсы</a></div>
-        <div class="sign"><a href="/">Записаться</a></div>
+        <div class="sign"><a href="#take-a-lesson">Записаться</a></div>
       </div>
     </div>
   </section>
@@ -153,12 +153,13 @@
       </h1>
     </div>
   </section>
+
   <section class="section-4">
     <form action="">
-      <fieldset>
+      <fieldset id="take-a-lesson">
         <h1 class="heading">НАЧНИТЕ ОБУЧЕНИЕ
           С ПРОБНОГО УРОКА</h1>
-        <select name="" id="">
+        <select name="">
           <option value="" disabled>Формат обучения</option>
         </select>
         <input type="text" placeholder="Имя">
@@ -219,7 +220,7 @@
       <!-- <div class="swiper-pagination"></div> -->
     </div>
     <div class="reviews__button-container">
-      <button class="sign">Записаться</button>
+      <button class="sign"><a href="#take-a-lesson">Записаться</a></button>
     </div>
   </section>
   <section class="section-5">
@@ -245,7 +246,7 @@
     </div>
     <div class="button-container">
       <div class="see-more">Смотреть еще</div>
-      <div class="try-red">Пробное занятие</div>
+      <div class="try-red"><a href="#take-a-lesson">Пробное занятие<a></div>
     </div>
   </section>
   <section class="students-pics">
@@ -323,7 +324,7 @@
         </p>
       </div>
       <div class="section-7__button-container">
-        <div class="try-white">Пробное занятие</div>
+        <div class="try-white"><a href="#take-a-lesson">Пробное занятие</a></div>
       </div>
     </section>
     <section class="section-8">
@@ -342,7 +343,7 @@
         <li><a class="whatsapp" href=""></a></li>
         <li><a class="telegram" href=""></a></li>
       </ul>
-      <button class="callback callback-contacts">Обратный звонок</button>
+      <button class="callback callback-contacts"><a href="#take-a-lesson">Обратный звонок<a></button>
     </section>
     <footer class="footer">
       <div class="footer__top-line">
@@ -363,7 +364,7 @@
             <li><a class="whatsapp" href=""></a></li>
             <li><a class="telegram" href=""></a></li>
           </ul>
-          <button class="callback callback-footer">Обратный звонок</button>
+          <button class="callback callback-footer"><a href="#take-a-lesson">Обратный звонок<a></button>
         </div>
       </div>
       <div class="footer__bottom-line">
