added links to wa, telegram and address

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
   <title>Sandler Rock School</title>
 </head>
 
@@ -28,9 +28,9 @@
           </ul>
         </nav>
         <div class="contacts-container">
-          <button class="callback"><a href="#take-a-lesson">Обратный звонок</a></button>
+          <button class="callback"><a href="/#take-a-lesson">Обратный звонок</a></button>
           <div class="contacts">
-            <div class="number"><a href=”tel:+74997558600>8 (499) 755 86 00</a></div>
+            <div class="number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
             <address>г. Москва, Потаповский пер. 3с1</address>
           </div>
         </div>
@@ -42,10 +42,13 @@
         <p class="info-text">Посети мастер-класс в интереснейшем месте Москвы
           и стань профессиональным музыкантом</p>
       </div>
+      
       <div class="section-1__content__button-container">
-        <div class="whatsapp"></div>
-        <div class="telegram"></div>
-        <div class="try-lesson"><a href="#take-a-lesson">Пробное занятие<a></div>
+        <ul class="icon-container">
+          <li><a class="whatsapp" href="https://api.whatsapp.com/send/?phone=74997558600"></a></li>
+          <li><a class="telegram" href="https://t.me/https://t.me/+74997558600"></a></li>
+        </ul>
+        <div class="try-lesson"><a href="/#take-a-lesson">Пробное занятие<a></div>
       </div>
     </div>
   </section>
@@ -108,7 +111,7 @@
       </div>
       <div class="buttons-container">
         <div class="all-courses"><a href="/">Все курсы</a></div>
-        <div class="sign"><a href="#take-a-lesson">Записаться</a></div>
+        <div class="sign"><a href="/#take-a-lesson">Записаться</a></div>
       </div>
     </div>
   </section>
@@ -215,12 +218,12 @@
         </div>
 
       </div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-      <!-- <div class="swiper-pagination"></div> -->
+      <!-- <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div> -->
+      <div class="swiper-pagination"></div>
     </div>
     <div class="reviews__button-container">
-      <button class="sign"><a href="#take-a-lesson">Записаться</a></button>
+      <button class="sign"><a href="/#take-a-lesson">Записаться</a></button>
     </div>
   </section>
   <section class="section-5">
@@ -246,7 +249,7 @@
     </div>
     <div class="button-container">
       <div class="see-more">Смотреть еще</div>
-      <div class="try-red"><a href="#take-a-lesson">Пробное занятие<a></div>
+      <div class="try-red"><a href="/#take-a-lesson">Пробное занятие<a></div>
     </div>
   </section>
   <section class="students-pics">
@@ -324,7 +327,7 @@
         </p>
       </div>
       <div class="section-7__button-container">
-        <div class="try-white"><a href="#take-a-lesson">Пробное занятие</a></div>
+        <div class="try-white"><a href="/#take-a-lesson">Пробное занятие</a></div>
       </div>
     </section>
     <section class="section-8">
@@ -336,14 +339,14 @@
 
       <p>Режим работы:</p>
       <p class="mina">Ежедневно с 10:00 до 22:00</p>
-      <div class="section-8__number"><a href=”tel:+74997558600”>8 (499) 755 86 00</a></div>
+      <div class="section-8__number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
       <address>г. Москва, Потаповский пер. 3с1</address>
       <ul class="icon-container">
         <li><a class="tiktok" href=""></a></li>
-        <li><a class="whatsapp" href=""></a></li>
-        <li><a class="telegram" href=""></a></li>
+        <li><a class="whatsapp" href="https://api.whatsapp.com/send/?phone=74997558600"></a></li>
+        <li><a class="telegram" href="https://t.me/+74997558600"></a></li>
       </ul>
-      <button class="callback callback-contacts"><a href="#take-a-lesson">Обратный звонок<a></button>
+      <button class="callback callback-contacts"><a href="/#take-a-lesson">Обратный звонок</a></button>
     </section>
     <footer class="footer">
       <div class="footer__top-line">
@@ -361,10 +364,10 @@
         <div class="footer__icons-container">
           <ul class="icon-container">
             <li><a class="tiktok" href=""></a></li>
-            <li><a class="whatsapp" href=""></a></li>
-            <li><a class="telegram" href=""></a></li>
+            <li><a class="whatsapp" href="https://api.whatsapp.com/send/?phone=74997558600"></a></li>
+            <li><a class="telegram" href="https://t.me/+74997558600"></a></li>
           </ul>
-          <button class="callback callback-footer"><a href="#take-a-lesson">Обратный звонок<a></button>
+          <button class="callback callback-footer"><a href="/#take-a-lesson">Обратный звонок</a></button>
         </div>
       </div>
       <div class="footer__bottom-line">
@@ -377,7 +380,7 @@
           д. 109/2, кв. 17
         </p>
         <div class="footer__contacts-container">
-          <div class="footer__number"><a href=”tel:+74997558600>8 (499) 755 86 00</a></div>
+          <div class="footer__number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
           <address>г. Москва, Потаповский пер. 3с1</address>
         </div>
       </div>
